# parataxis

./: .gitignore  CMakeLists.txt  README.md  compile.sh  compileExampleSet.sh  configureExample.sh  main.cu  runTests.sh  test64x24.tif
buildSystem/: Compilation.py  Documentation.md  EnvironmentSetup.py  Example.py  ParamParser.py  RuntimeTest.py  checkOpenPMD_h5.py  commonCmds.sh  compileOptions.sh  execHelpers.py  execTests.py  runParallel.sh  runTests.py  statusMonitors.py  termHelpers.py  testOptions.sh
cmake/: FindTiffWriter.cmake
examples/Diplomarbeit/: cmakeFlags  documentation.yml  startProfiling.sh
examples/Diplomarbeit/submit/: 0001gpus.cfg.in  0001gpusSpeedTest.cfg.in  0004gpus.cfg.in  0016gpus128.cfg.in  1gpuProfiling.cfg.in  1gpuRandBig.cfg.in  1gpuRandSmall.cfg.in  4gpuProfiling.cfg.in  8gpuProfiling.cfg.in  longTarget.cfg.in
examples/DiplomarbeitBig/: cmakeFlags  documentation.yml
examples/DiplomarbeitBig/submit/: 0016gpus128.cfg.in  longTarget.cfg.in
examples/DiplomarbeitMulti/: cmakeFlags  documentation.yml
examples/DiplomarbeitMulti/submit/: 0001gpus.cfg.in  0016gpus128.cfg.in  0032gpus.cfg.in  0064gpus.cfg.in
examples/DoubleSlit/: cmakeFlags  documentation.yml
examples/DoubleSlit/submit/: 0001gpus.cfg.in  0004gpus.cfg.in  0004gpusLong.cfg.in
examples/DoubleSlitScaling/: cmakeFlags  documentation.yml
examples/DoubleSlitScaling/submit/: 0001gpus.cfg.in  128gpu.cfg.in  16gpu.cfg.in  16gpuStrong.cfg.in  16gpuStrong2.cfg.in  1gpu.cfg.in  1gpuStrong.cfg.in  1gpuStrong2.cfg.in  208gpu.cfg.in  248gpu.cfg.in  256gpu.cfg.in  2gpu.cfg.in  2gpu64x256x256.in  2gpuStrong.cfg.in  2gpuStrong2.cfg.in  32gpu.cfg.in  32gpu256x512x512.cfg.in  32gpuStrong.cfg.in  32gpuStrong2.cfg.in  4gpu.cfg.in  4gpu64x512x256.cfg.in  4gpuStrong.cfg.in  4gpuStrong2.cfg.in  64gpu.cfg.in  64gpu512x512x512.cfg.in  64gpuStrong.cfg.in  64gpuStrong2.cfg.in  8gpu.cfg.in  8gpu64x512x512.cfg.in  8gpuStrong.cfg.in  8gpuStrong2.cfg.in  problemSize1.cfg.in  problemSize10.cfg.in  problemSize11.cfg.in  problemSize12.cfg.in  problemSize13.cfg.in  problemSize14.cfg.in  problemSize15.cfg.in  problemSize16.cfg.in  problemSize17.cfg.in  (+8 more)
examples/ModuleTest/: cmakeFlags  documentation.yml
examples/ModuleTest/submit/: 0001gpus.cfg.in  0001gpusBig.cfg.in  0001gpusCheckpoint.cfg.in  0001gpusLong.cfg.in  0001gpusNoBeamstop.cfg.in
examples/ModuleTest/testData/: scatterHelpers.py  validateInterference.py  validateRandom.py  validateRandomRect.py  validateScatterOnLineDensity.py  validateSingleCell.py
examples/hdf5Test/: cmakeFlags  documentation.yml
examples/hdf5Test/submit/: 0001gpus.cfg.in  0001gpusHDF5Field.cfg.in  0001gpusRestart.cfg.in  0008gpus.cfg.in  0008gpusHDF5Field.cfg.in  0008gpusRestart.cfg.in
examples/hdf5Test/testData/: createHDF5Filesets.py  validateCheckpoint.py  validateFieldInterpolator.py  validateRestart.py
include/: ComplexTraits.hpp  ConditionalShrink.hpp  DensityField.hpp  Field.hpp  GatherSlice.hpp  GetFlagOrDefault.hpp  LaserSource.hpp  PngCreator.hpp  RNGProvider.hpp  RNGProvider.tpp  RNGState.hpp  Random.hpp  ReduceZ.hpp  ShrinkToDim.hpp  Simulation.hpp  TimerIntervallExt.hpp  ToVector.hpp  TransformBox.hpp  compileTimeValidation.hpp  convertToSpace.hpp  generators.hpp  mallocMCConfig.hpp  param.loader  parataxisTypes.hpp  simulation_defines.hpp  version.hpp  xrtTypes.hpp
include/debug/: LogLevels.hpp
include/detector/: AddWaveParticles.hpp  CountParticles.hpp  DetectorConfig.hpp  NoDetectorImpl.hpp  PhotonDetector.hpp  PhotonDetectorImpl.hpp
include/fields/: DensityField.hpp  FieldManipulator.hpp  HDF5FieldInterpolator.hpp  IFieldManipulator.hpp  RandomManipulator.hpp  StaticManipulator.hpp
include/math/: Max.hpp  abs.hpp  angleHelpers.hpp  round.hpp
include/param/: Png.param  memory.param
include/particles/: ParataxisParticleDescription.hpp  ParticleFillInfo.hpp  Particles.hpp  Particles.kernel  Particles.tpp  ParticlesFunctors.hpp  ParticlesInit.kernel  ProcessLeavingParticles.hpp  XrtParticleDescription.hpp
include/particles/distribution/: ConstDistribution.hpp  ConstDistributionTime.hpp  EvenDistPosition.hpp  RandomPosition.hpp
include/particles/filters/: IndexFilter.hpp  TrueFilter.hpp
include/particles/functors/: ConstDistribution.hpp  CopySpeciesToHost.hpp  EvenDistPosition.hpp  GetAmplitude.hpp  GetAngFrequency.hpp  GetPhaseByTimestep.hpp  GetWavelength.hpp  IterateSpecies.hpp  NoAlgo.hpp  PhotonPusher.hpp  RandomPosition.hpp
include/particles/initPolicies/: ConstDirection.hpp  ConstDistribution.hpp  ConstMomentum.hpp  ConstNumPhotons.hpp  ConstPosition.hpp  EqualPhotonsDistribution.hpp  EvenDistPosition.hpp  PlaneWavePhase.hpp  RandomPosition.hpp
include/particles/pusher/: Photon.hpp  PhotonPusher.hpp
include/particles/scatterer/: Fixed.hpp  LinearDensity.hpp  Never.hpp  OnRandom.hpp  OnThreshold.hpp  RandomDirection.hpp  Reflect.hpp  Reflection.hpp  ScatterFunctor.hpp
include/plugins/: DebugHelper.hpp  ISimulationPlugin.hpp  PrintDetector.hpp  PrintField.hpp  PrintParticles.hpp  TaggedBuffer.hpp  TiffToDensity.hpp  plugins.hpp
include/random/: RNGProvider.hpp  RNGProvider.tpp  RNGState.hpp  Random.hpp
include/random/methods/: Xor.hpp  (+1 more)
include/simulationControl/: SimulationStarter.hpp
include/simulation_defines/: _defaultParam.loader  _defaultUnitless.loader  extensionParam.loader  extensionUnitless.loader
include/traits/: PICToOpenPMD.hpp  PICToOpenPMD.tpp  PICToSplash.hpp  PICToSplash.tpp  SIBaseUnits.hpp  SplashToPIC.hpp  SplashToPIC.tpp  stdRenamings.hpp
submit/: 0001gpus.cfg.in  0001gpusBig.cfg.in  0002gpus.cfg.in  0004gpus.cfg.in  0008gpus.cfg.in  0016gpus.cfg.in  16gpus.cfg.in  1gpu.cfg  1gpu.cfg.in  1gpus.cfg.in  1gpusBig.cfg.in  2gpus.cfg  2gpus.cfg.in  4gpus.cfg  4gpus.cfg.in  8gpus.cfg.in  submitAction.sh
submit/bash/: bash_mpiexec.tpl  bash_mpirun.tpl
submit/hypnos/: k20_profile.tpl
submit/hypnos-hzdr/: k20_memcheck_profile.tpl  k20_nvprof_profile.tpl  k20_profile.tpl  k80_nvprof_profile.tpl  k80_profile.tpl
submit/hzdr-hypnos/: k20_profile.tpl
submit/taurus-tud/: k20x_profile.tpl  k80_profile.tpl
(+101 files in other folders)
